--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "babel-jest": "^26.6.1",
+    "firebase": "^8.0.1",
     "jest": "^26.6.1",
     "react": "^16.13.1",
     "react-currency-format": "^1.0.0",
