--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-flip-move": "^3.0.4",
     "react-number-format": "^4.4.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
