--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-jest": "^26.6.1",
     "firebase": "^8.0.1",
     "jest": "^26.6.1",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
